--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,8 @@ PORT=3000
 MONGO_URL='mongo_url'
 JWT_SECRET='some_secret'
 JWT_EXPIRES_IN='period_like_10m'
+EMAIL_SENDER_MAIL='sendermail@example.com'
+EMAIL_SMTP='smtp-relay.brevo.com'
+EMAIL_PORT=587
+EMAIL_USER='usermail@example.com'
+EMAIL_PASS='your_generated_smtp_pass'
