--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "mongoose": "^7.3.2",
     "morgan": "1.10.0",
     "multer": "^1.4.5-lts.1",
+    "nodemailer": "^6.9.3",
+    "pug": "^3.0.2",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
